fix: prevent text overflow

--- a/src/components/CommentCard/CommentCard.module.css
+++ b/src/components/CommentCard/CommentCard.module.css
@@ -23,6 +23,7 @@
   margin-block-start: 1.0625rem;
   font-size: var(--font-size-body-2);
   line-height: 1.375rem;
+  word-break: break-word;
 }
 
 .replyTo {
